--- a/src/renderer/DeviceSettingsWindow.mxml
+++ b/src/renderer/DeviceSettingsWindow.mxml
@@ -7,221 +7,221 @@
 			   initialize="settings_initializeHandler(event)">
 	<fx:Script>
 		<![CDATA[
-		import mx.core.FlexGlobals;
-		import mx.events.CloseEvent;
-		import mx.events.FlexEvent;
-		import mx.managers.PopUpManager;
+        import mx.core.FlexGlobals;
+        import mx.events.CloseEvent;
+        import mx.events.FlexEvent;
+        import mx.managers.PopUpManager;
 
-		import device.RunningDevice;
-		import device.running.AndroidDevice;
+        import device.running.RunningDevice;
+        import device.running.AndroidDevice;
 
-		import helpers.DeviceSettings;
-		import helpers.DeviceSettingsHelper;
+        import helpers.DeviceSettings;
+        import helpers.DeviceSettingsHelper;
 
-		import helpers.DevicePortSettings;
+        import helpers.DevicePortSettings;
 
-		import helpers.DevicePortSettingsHelper;
+        import helpers.DevicePortSettingsHelper;
 
-		import helpers.PortSwitcher;
+        import helpers.PortSwitcher;
 
-		public var dev:RunningDevice;
-		public var arrayString:Array;
-		public var arrayStringDevTeam:Array;
+        public var dev:RunningDevice;
+        public var arrayString:Array;
+        public var arrayStringDevTeam:Array;
 
-		private var portSwitcher:PortSwitcher = new PortSwitcher();
+        private var portSwitcher:PortSwitcher = new PortSwitcher();
 
-		private var deviceSettingsHelper:DeviceSettingsHelper = DeviceSettingsHelper.shared;
-		private var deviceSettings:DeviceSettings;
+        private var deviceSettingsHelper:DeviceSettingsHelper = DeviceSettingsHelper.shared;
+        private var deviceSettings:DeviceSettings;
 
-		private var devicePortSettingsHelper:DevicePortSettingsHelper = DevicePortSettingsHelper.shared;
-		private var devicePortSettings:DevicePortSettings;
+        private var devicePortSettingsHelper:DevicePortSettingsHelper = DevicePortSettingsHelper.shared;
+        private var devicePortSettings:DevicePortSettings;
 
-		protected function settings_initializeHandler(event:FlexEvent):void {
-			if (dev != null) {
-				deviceId.text = dev.id;
-				deviceName.text = dev.modelName;
+        protected function settings_initializeHandler(event:FlexEvent):void {
+            if (dev != null) {
+                deviceId.text = dev.id;
+                deviceName.text = dev.modelName;
 
-				if (dev is AndroidDevice) {
-					androidUsbGroup.visible = !dev.simulator; //true;
-					androidUsbGroup.includeInLayout = !dev.simulator; //true;
-					installAppButton.visible = false;
-				} else {
-					androidUsbGroup.visible = false;
-					androidUsbGroup.includeInLayout = false;
-					installAppButton.visible = true;
-				}
+                if (dev is AndroidDevice) {
+                    androidUsbGroup.visible = !dev.simulator; //true;
+                    androidUsbGroup.includeInLayout = !dev.simulator; //true;
+                    installAppButton.visible = false;
+                } else {
+                    androidUsbGroup.visible = false;
+                    androidUsbGroup.includeInLayout = false;
+                    installAppButton.visible = true;
+                }
 
-				deviceSettings = deviceSettingsHelper.getSettingsForDevice(dev.id);
-				devicePortSettings = devicePortSettingsHelper.getPortSetting(dev.id);
+                deviceSettings = deviceSettingsHelper.getSettingsForDevice(dev.id);
+                devicePortSettings = devicePortSettingsHelper.getPortSetting(dev.id);
 
-				portAutomatic.selected = deviceSettings.automaticPort;
-				androidUsb.selected = deviceSettings.usbMode;
-				portSelection.text = portAutomatic.selected == true ? "" : deviceSettings.port.toString();
-				portSelection.enabled = !portAutomatic.selected;
-			}
-		}
+                portAutomatic.selected = deviceSettings.automaticPort;
+                androidUsb.selected = deviceSettings.usbMode;
+                portSelection.text = portAutomatic.selected == true ? "" : deviceSettings.port.toString();
+                portSelection.enabled = !portAutomatic.selected;
+            }
+        }
 
-		private function closeHandler(event:CloseEvent):void {
-			PopUpManager.removePopUp(this);
-		}
+        private function closeHandler(event:CloseEvent):void {
+            PopUpManager.removePopUp(this);
+        }
 
-		protected function portAutomatic_changeHandler(event:Event):void {
-			portSelection.enabled = !portAutomatic.selected;
-			portSelection.text = portAutomatic.selected == true ? "" : deviceSettings.port.toString();
+        protected function portAutomatic_changeHandler(event:Event):void {
+            portSelection.enabled = !portAutomatic.selected;
+            portSelection.text = portAutomatic.selected == true ? "" : deviceSettings.port.toString();
 
-			if (portSelection.text != "") {
-				var port:int = parseInt(portSelection.text);
-				validatePort(port)
-			} else {
-				portErrorMessage.visible = false;
-				saveButton.enabled = true;
-				portErrorMessageGroup.height = 0;
-			}
-		}
+            if (portSelection.text != "") {
+                var port:int = parseInt(portSelection.text);
+                validatePort(port)
+            } else {
+                portErrorMessage.visible = false;
+                saveButton.enabled = true;
+                portErrorMessageGroup.height = 0;
+            }
+        }
 
-		protected function portSelection_changeHandler(event:Event):void {
-			var target:TextInput = event.currentTarget as TextInput;
-			if (!target) return;
+        protected function portSelection_changeHandler(event:Event):void {
+            var target:TextInput = event.currentTarget as TextInput;
+            if (!target) return;
 
-			if (target.text != "") {
-				var port:int = parseInt(target.text);
-				validatePort(port)
-			} else {
-				portErrorMessage.visible = false;
-				saveButton.enabled = true;
-				portErrorMessageGroup.height = 0;
-			}
+            if (target.text != "") {
+                var port:int = parseInt(target.text);
+                validatePort(port)
+            } else {
+                portErrorMessage.visible = false;
+                saveButton.enabled = true;
+                portErrorMessageGroup.height = 0;
+            }
 
-			portAutomatic.selected = portSelection.text == "";
-		}
+            portAutomatic.selected = portSelection.text == "";
+        }
 
-		private function validatePort(port:int):void {
-			if (port > 64999 || port <= 1024) {
-				portErrorMessage.visible = true;
-				portErrorMessage.text = "Port value must be between 1025 and 64999";
-				saveButton.enabled = false;
-				portErrorMessageGroup.height = 10;
-				return;
-			}
+        private function validatePort(port:int):void {
+            if (port > 64999 || port <= 1024) {
+                portErrorMessage.visible = true;
+                portErrorMessage.text = "Port value must be between 1025 and 64999";
+                saveButton.enabled = false;
+                portErrorMessageGroup.height = 10;
+                return;
+            }
 
-			if (deviceIsLocalhost() == true) {
-				var currentLocalPort:int = devicePortSettings == null ? -1 : devicePortSettings.port;
-				if (portSwitcher.checkSocketPortAvailability(port) == false && port != currentLocalPort) {
-					portErrorMessage.visible = true;
-					portErrorMessage.text = "Port is unavailable";
-					saveButton.enabled = false;
-					portErrorMessageGroup.height = 10;
-					return;
-				}
+            if (deviceIsLocalhost() == true) {
+                var currentLocalPort:int = devicePortSettings == null ? -1 : devicePortSettings.port;
+                if (portSwitcher.checkSocketPortAvailability(port) == false && port != currentLocalPort) {
+                    portErrorMessage.visible = true;
+                    portErrorMessage.text = "Port is unavailable";
+                    saveButton.enabled = false;
+                    portErrorMessageGroup.height = 10;
+                    return;
+                }
 
-				var registeredDevice:String = DevicePortSettingsHelper.shared.deviceForRegisteredPort(port);
-				if (registeredDevice != null && registeredDevice.toLowerCase() != dev.id.toLowerCase()) {
-					portErrorMessage.visible = true;
-					portErrorMessage.text = "Port already assigned on device\n" + registeredDevice;
-					saveButton.enabled = true;
-					portErrorMessageGroup.height = 20;
-					return
-				}
-			}
+                var registeredDevice:String = DevicePortSettingsHelper.shared.deviceForRegisteredPort(port);
+                if (registeredDevice != null && registeredDevice.toLowerCase() != dev.id.toLowerCase()) {
+                    portErrorMessage.visible = true;
+                    portErrorMessage.text = "Port already assigned on device\n" + registeredDevice;
+                    saveButton.enabled = true;
+                    portErrorMessageGroup.height = 20;
+                    return
+                }
+            }
 
-			portErrorMessage.visible = false;
-			saveButton.enabled = true;
-			portErrorMessageGroup.height = 0;
-		}
+            portErrorMessage.visible = false;
+            saveButton.enabled = true;
+            portErrorMessageGroup.height = 0;
+        }
 
-		private function deviceIsLocalhost():Boolean {
-			return androidUsb.selected == true || dev.simulator == true;
-		}
+        private function deviceIsLocalhost():Boolean {
+            return androidUsb.selected == true || dev.simulator == true;
+        }
 
-		protected function save_clickHandler(event:MouseEvent):void {
-			var hasToRestart:Boolean = dev.settingsPort != portSelection.text || dev.automaticPort != portAutomatic.selected || dev.usbMode != androidUsb.selected;
-			if (dev != null) {
-				dev.settingsPort = portAutomatic.selected == true ? dev.port : portSelection.text;
-				dev.automaticPort = portAutomatic.selected;
-				dev.usbMode = androidUsb.selected;
+        protected function save_clickHandler(event:MouseEvent):void {
+            var hasToRestart:Boolean = dev.settingsPort != portSelection.text || dev.automaticPort != portAutomatic.selected || dev.usbMode != androidUsb.selected;
+            if (dev != null) {
+                dev.settingsPort = portAutomatic.selected == true ? dev.port : portSelection.text;
+                dev.automaticPort = portAutomatic.selected;
+                dev.usbMode = androidUsb.selected;
 
-				deviceSettings.usbMode = dev.usbMode;
-				deviceSettings.automaticPort = dev.automaticPort;
+                deviceSettings.usbMode = dev.usbMode;
+                deviceSettings.automaticPort = dev.automaticPort;
 
-				if (dev.automaticPort == false) {
-					deviceSettings.port = parseInt(portSelection.text);
-				} else {
-					// localhost
-					var existingDevicePort:int = DevicePortSettingsHelper.shared.getPortOfDevice(dev.id);
-					deviceSettings.port = existingDevicePort == -1 ? 8080 : existingDevicePort;
+                if (dev.automaticPort == false) {
+                    deviceSettings.port = parseInt(portSelection.text);
+                } else {
+                    // localhost
+                    var existingDevicePort:int = DevicePortSettingsHelper.shared.getPortOfDevice(dev.id);
+                    deviceSettings.port = existingDevicePort == -1 ? 8080 : existingDevicePort;
 
-					// wifi
-					deviceSettings.port = 8080;
-				}
+                    // wifi
+                    deviceSettings.port = 8080;
+                }
 
-				deviceSettingsHelper.save(deviceSettings);
+                deviceSettingsHelper.save(deviceSettings);
 
-				if (dev.simulator == true || dev.usbMode == true) {
-					var portSettings:DevicePortSettings = new DevicePortSettings(dev.id, deviceSettings.port);
-					devicePortSettingsHelper.addSettings(portSettings);
-				}
-			}
+                if (dev.simulator == true || dev.usbMode == true) {
+                    var portSettings:DevicePortSettings = new DevicePortSettings(dev.id, deviceSettings.port);
+                    devicePortSettingsHelper.addSettings(portSettings);
+                }
+            }
 
-			if (hasToRestart) {
-				FlexGlobals.topLevelApplication.restartDevice(dev);
-			}
+            if (hasToRestart) {
+                FlexGlobals.topLevelApplication.restartDevice(dev);
+            }
 
-			PopUpManager.removePopUp(this);
-		}
+            PopUpManager.removePopUp(this);
+        }
 
-		private var userDir:File;
+        private var userDir:File;
 
-		protected function install_clickHandler(event:MouseEvent):void {
-			userDir = File.userDirectory;
-			var typeFilter:FileFilter = new FileFilter("App file", "*.apk; *.app");
+        protected function install_clickHandler(event:MouseEvent):void {
+            userDir = File.userDirectory;
+            var typeFilter:FileFilter = new FileFilter("App file", "*.apk; *.app");
 
-			userDir.addEventListener(Event.SELECT, fileSelected, false, 0, true);
-			userDir.browse([typeFilter]);
-		}
+            userDir.addEventListener(Event.SELECT, fileSelected, false, 0, true);
+            userDir.browse([typeFilter]);
+        }
 
-		private function fileSelected(ev:Event):void {
-			userDir.removeEventListener(Event.SELECT, fileSelected);
+        private function fileSelected(ev:Event):void {
+            userDir.removeEventListener(Event.SELECT, fileSelected);
 
-			process = new NativeProcess();
-			procInfo = new NativeProcessStartupInfo();
+            process = new NativeProcess();
+            procInfo = new NativeProcessStartupInfo();
 
-			procInfo.executable = new File("/usr/bin/xcrun");
-			procInfo.workingDirectory = File.userDirectory;
+            procInfo.executable = new File("/usr/bin/xcrun");
+            procInfo.workingDirectory = File.userDirectory;
 
-			process.addEventListener(NativeProcessExitEvent.EXIT, onInstallExit, false, 0, true);
-			process.addEventListener(ProgressEvent.STANDARD_ERROR_DATA, onOutputError, false, 0, true);
-			process.addEventListener(ProgressEvent.STANDARD_OUTPUT_DATA, onOutput, false, 0, true);
+            process.addEventListener(NativeProcessExitEvent.EXIT, onInstallExit, false, 0, true);
+            process.addEventListener(ProgressEvent.STANDARD_ERROR_DATA, onOutputError, false, 0, true);
+            process.addEventListener(ProgressEvent.STANDARD_OUTPUT_DATA, onOutput, false, 0, true);
 
-			procInfo.arguments = new <String>["simctl", "install", dev.id, userDir.nativePath];
-			process.start(procInfo);
+            procInfo.arguments = new <String>["simctl", "install", dev.id, userDir.nativePath];
+            process.start(procInfo);
 
-			enabled = false;
-		}
+            enabled = false;
+        }
 
-		protected function onOutputError(event:ProgressEvent):void {
-			trace(process.standardError.readUTFBytes(process.standardError.bytesAvailable));
-		}
+        protected function onOutputError(event:ProgressEvent):void {
+            trace(process.standardError.readUTFBytes(process.standardError.bytesAvailable));
+        }
 
-		protected function onOutput(event:ProgressEvent):void {
-			trace(process.standardOutput.readUTFBytes(process.standardOutput.bytesAvailable));
-		}
+        protected function onOutput(event:ProgressEvent):void {
+            trace(process.standardOutput.readUTFBytes(process.standardOutput.bytesAvailable));
+        }
 
-		protected function onInstallExit(event:NativeProcessExitEvent):void {
-			process.removeEventListener(NativeProcessExitEvent.EXIT, onInstallExit);
-			process = null;
-			procInfo = null;
-			userDir = null;
+        protected function onInstallExit(event:NativeProcessExitEvent):void {
+            process.removeEventListener(NativeProcessExitEvent.EXIT, onInstallExit);
+            process = null;
+            procInfo = null;
+            userDir = null;
 
-			enabled = true;
-		}
+            enabled = true;
+        }
 
-		private var process:NativeProcess;
-		private var procInfo:NativeProcessStartupInfo;
+        private var process:NativeProcess;
+        private var procInfo:NativeProcessStartupInfo;
 
-		protected function copyId_clickHandler(event:MouseEvent):void {
-			Clipboard.generalClipboard.setData(ClipboardFormats.TEXT_FORMAT, dev.id);
-		}
-		]]>
+        protected function copyId_clickHandler(event:MouseEvent):void {
+            Clipboard.generalClipboard.setData(ClipboardFormats.TEXT_FORMAT, dev.id);
+        }
+        ]]>
 	</fx:Script>
 	
 	<s:VGroup left="6" right="6" top="10" bottom="36" gap="8" horizontalAlign="center"
